--- a/Lab2/Dockerfile
+++ b/Lab2/Dockerfile
@@ -7,13 +7,16 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y \
-        curl \
+        ssh \
+	curl \
         wget \
         git \
         vim \
         nano \
-        build-essential \
-        ca-certificates \
+	rsync \
+	tar \
+	python3 \
+        ca-certificates\
         software-properties-common;
 
 # Installo i pacchetti necessari per il corso di lab 2
@@ -24,6 +27,7 @@ RUN apt-get install -y \
         gdb && \
         rm -rf /var/lib/apt/lists/*
 
+RUN useradd -m user && yes password | passwd user
 
 WORKDIR /app
 
