--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -25,8 +25,19 @@ RUN apt-get install -y \
         build-essential \
         cmake \
         valgrind \
-        gdb && \
-        rm -rf /var/lib/apt/lists/*
+        gdb
+        
+# Installo i pacchetti necessari per assembly AESO
+
+RUN apt-get update && \
+    apt-get install -y software-properties-common && \
+    dpkg --add-architecture armhf && \
+    apt-get update && \
+    apt-get install -y \
+        gcc-arm-linux-gnueabihf \
+        qemu-user \
+        gdb-multiarch && \
+    rm -rf /var/lib/apt/lists/*
 
 RUN useradd -m user && yes password | passwd user
 
