--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  lab2:
-    image: fantoni1/lab2-inf-unipi:latest
-    container_name: lab2
+  2nd-year:
+    image: fantoni1/2nd-year-inf-unipi:latest
+    container_name: 2nd-year
     volumes:
       - ./data/:/home/user
     cap_add:
